--- a/main.html
+++ b/main.html
@@ -25,12 +25,12 @@
 
 </head>
 
-<body onload="GetProducts()">
+<body onload="setnavstat(1)">
   <div class="bg div">
 
     <nav class="fixed-top" style="background-color: rgb(255, 255, 255) !important;">
       <img class="float-left" src="images/logo.png" style="max-width:300px; display: inline;">
-      <p  id=hiusrname>Some text</p>
+      <p id=hiusrname>Some text</p>
       <nav class="pt-5 navbar navbar-fixed-top navbar-expand-lg navbar-light" style="background-color: rgba(255, 255, 255, 0.5)  !important;">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -117,183 +117,183 @@
   <!-- PRODUCTS -->
   <h5 class="myh5 pr-5 float-right">
     <a href="../Products Page">See all...</a>
-    </h4>
-    <h4 class="myh4 pl-5">Today's Hot Picks:</h4>
-    <hr>
-    <div class="container" style="height:330px;" id="products"></div>
-    <!-- END OF PRODUCTS -->
-    <!-- Admin MODAL -->
-    <div id="AdminPage" class="modal">
-      <div id="AdminPageContent" class="modal-content">
-        <div class="modal-header" style="width: 100%; height: 10%;">
-          <h2 id="AdminPageHeader"></h2>
-          <span id="adminclose" class="close">&times;</span>
-        </div>
-        <div class="transparent-container" style="width: 100%; height: 90%;">
-          <div id="results_dyn" style="overflow-y: scroll; margin-left: 30px;margin-top: 30px;text-align: left;">
-          </div>
+  </h5>
+  <h4 class="myh4 pl-5">Today's Hot Picks:</h4>
+  <hr>
+  <div class="container" style="height:330px;" id="products"></div>
+  <!-- END OF PRODUCTS -->
+  <!-- Admin MODAL -->
+  <div id="AdminPage" class="modal">
+    <div id="AdminPageContent" class="modal-content">
+      <div class="modal-header" style="width: 100%; height: 10%;">
+        <h2 id="AdminPageHeader"></h2>
+        <span id="adminclose" class="close">&times;</span>
+      </div>
+      <div class="transparent-container" style="width: 100%; height: 90%;">
+        <div id="results_dyn" style="overflow-y: scroll; margin-left: 30px;margin-top: 30px;text-align: left;">
         </div>
       </div>
     </div>
+  </div>
 
 
-    <!-- END OF Admin MODAL -->
+  <!-- END OF Admin MODAL -->
 
 
-    <!-- LOGIN MODAL -->
-    <div id="Login" class="modal">
-      <div class="modal-content">
-        <span id="logclosbut" class="close">&times;</span>
+  <!-- LOGIN MODAL -->
+  <div id="Login" class="modal">
+    <div class="modal-content">
+      <span id="logclosbut" class="close">&times;</span>
 
-        <div class="transparent-container">
-          <form class="form-signin">
-            <div class="text-center mb-4">
-              <img class="mb-4" src="images/logo.png" alt="" width="200">
-              <h1 class="h3 mb-3 font-weight-normal myp">Welcome back!</h1>
-            </div>
+      <div class="transparent-container">
+        <form class="form-signin">
+          <div class="text-center mb-4">
+            <img class="mb-4" src="images/logo.png" alt="" width="200">
+            <h1 class="h3 mb-3 font-weight-normal myp">Welcome back!</h1>
+          </div>
 
-            <div>
-              <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-              <br>
-            </div>
-
-            <div>
-              <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-              <br>
-            </div>
-
-            <div class="checkbox myh4">
-              <label>
-                <input type="checkbox" value="remember-me"> Remember me
-              </label>
-            </div>
-            <p class="mt-5 mb-3 text-muted text-center">&copy; 2017-2018</p>
-          </form>
-          <button class="btn btn-warning btn-primary btn-block" onclick="loginuser('','',0)">Sign in</button>
-          <br>
           <div>
-            <p class="text-info text-center">
-              <ins> Forgot your password? </ins>
-            </p>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+            <br>
           </div>
+
+          <div>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            <br>
+          </div>
+
+          <div class="checkbox myh4">
+            <label>
+              <input type="checkbox" value="remember-me"> Remember me
+            </label>
+          </div>
+          <p class="mt-5 mb-3 text-muted text-center">&copy; 2017-2018</p>
+        </form>
+        <button class="btn btn-warning btn-primary btn-block" onclick="loginuser('','',0)">Sign in</button>
+        <br>
+        <div>
+          <p class="text-info text-center">
+            <ins> Forgot your password? </ins>
+          </p>
         </div>
       </div>
     </div>
-    <!-- END OF LOGIN MODAL -->
+  </div>
+  <!-- END OF LOGIN MODAL -->
 
-    <!-- REGISTER MODAL -->
-    <div class="modal" id="RegisterModal">
-      <div class="modal-content w-60">
-        <!--         <div class="modal-header">
+  <!-- REGISTER MODAL -->
+  <div class="modal" id="RegisterModal">
+    <div class="modal-content w-60">
+      <!--         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           </button>
         </div>
       -->
-        <span id="regclosbut" class="close">&times;</span>
+      <span id="regclosbut" class="close">&times;</span>
 
-        <!--       <span aria-hidden="true" onclick="function() {        modal.style.display = "none";      }">&times;</span> -->
+      <!--       <span aria-hidden="true" onclick="function() {        modal.style.display = "none";      }">&times;</span> -->
 
-        <div class="modal-body">
-          <div class="text-center">
-            <img class="" src="images/logo.png" alt="" width="200">
-          </div>
-          <div class="order-md-1">
-            <form class="needs-validation" novalidate>
-              <div class="mb-3 mytext">
-                <label for="firstName">First name:</label>
-                <span class="input-group-addon">
-                  <i class="glyphicon glyphicon-user"></i>
-                </span>
-                <input type="text" class="form-control" id="UserFirstName" placeholder="" value="" required>
-                <div class="invalid-feedback mytext">
-                  Please, enter your first name.
-                </div>
-              </div>
-              <div class="mb-3 mytext">
-                <label for="lastName">Last name:</label>
-                <span class="input-group-addon"></span>
-                <input type="text" class="form-control" id="UserLastName" placeholder="" value="" required>
-                <div class="invalid-feedback mytext">
-                  Please, enter your last name.
-                </div>
-              </div>
-              <div class="mb-3 mytext">
-                <label for="email">Email </label>
-                <input type="email" class="form-control" id="UserEmail" placeholder="you@example.com">
-                <div class="invalid-feedback mytext">
-                  Please enter a valid email address for shipping updates.
-                </div>
-              </div>
-              <div class="mb-3 mytext">
-                <label for="Password">Password:</label>
-                <div class="input-group mytext">
-                  <input type="text" class="form-control" id="UserPass" placeholder="Password" required>
-                  <div class="invalid-feedback mytext" style="width: 100%;">
-                    Your password is required.
-                  </div>
-                </div>
-              </div>
-              <div class="mb-3 mytext">
-                <label for="address">Address</label>
-                <input type="text" class="form-control" id="UserAddress" placeholder="1234 Main St" required>
-                <div class="invalid-feedback mytext">
-                  Please enter your shipping address.
-                </div>
-              </div>
-          </div>
-          </form>
+      <div class="modal-body">
+        <div class="text-center">
+          <img class="" src="images/logo.png" alt="" width="200">
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Back to Shopping</button>
-          <button type="button" class="btn btn-primary" onclick="Registeruser()">Register me</button>
+        <div class="order-md-1">
+          <form class="needs-validation" novalidate>
+            <div class="mb-3 mytext">
+              <label for="firstName">First name:</label>
+              <span class="input-group-addon">
+                <i class="glyphicon glyphicon-user"></i>
+              </span>
+              <input type="text" class="form-control" id="UserFirstName" placeholder="" value="" required>
+              <div class="invalid-feedback mytext">
+                Please, enter your first name.
+              </div>
+            </div>
+            <div class="mb-3 mytext">
+              <label for="lastName">Last name:</label>
+              <span class="input-group-addon"></span>
+              <input type="text" class="form-control" id="UserLastName" placeholder="" value="" required>
+              <div class="invalid-feedback mytext">
+                Please, enter your last name.
+              </div>
+            </div>
+            <div class="mb-3 mytext">
+              <label for="email">Email </label>
+              <input type="email" class="form-control" id="UserEmail" placeholder="you@example.com">
+              <div class="invalid-feedback mytext">
+                Please enter a valid email address for shipping updates.
+              </div>
+            </div>
+            <div class="mb-3 mytext">
+              <label for="Password">Password:</label>
+              <div class="input-group mytext">
+                <input type="text" class="form-control" id="UserPass" placeholder="Password" required>
+                <div class="invalid-feedback mytext" style="width: 100%;">
+                  Your password is required.
+                </div>
+              </div>
+            </div>
+            <div class="mb-3 mytext">
+              <label for="address">Address</label>
+              <input type="text" class="form-control" id="UserAddress" placeholder="1234 Main St" required>
+              <div class="invalid-feedback mytext">
+                Please enter your shipping address.
+              </div>
+            </div>
+        </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Back to Shopping</button>
+        <button type="button" class="btn btn-primary" onclick="Registeruser()">Register me</button>
+      </div>
+    </div>
+  </div>
+  <!-- END OF REGISTER MODAL -->
+  <footer style="background-color: #FEF377 !important;">
+    <nav class="navbar navbar-expand-lg navbar-light px-3 myh5" style="background-color: #FEF377 !important;">
+      <div class="container pt-5">
+        <div class="navbar-brand-container">
+          <a class="navbar-brand myh5" href="#">TOY STORY</a>
+        </div>
+        <br>
+        <br>
+        <div class="footer-list">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Our Company</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Products Page">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container px-md-3 px-sm-1 pb-5 footer-info mytext">
+      <div class="footer-add-margin">
+        <img class="float-right" src="images/footer.png" style="max-width:200px;">
+        <ul class="d-inline-block px-0 mr-3">
+          <li class="mytext">
+            <h5>Sales and inquiries</h5>
+          </li>
+          <li class="mytext">
+            <p>Email: </p>
+          </li>
+          <li class="mytext">
+            </p>Phone: +358 10 387 7053</p>
+          </li>
+        </ul>
+        <div class="d-inline-block mytext">
+          <button class="btn btn-success">Contact us</button>
         </div>
       </div>
     </div>
-    <!-- END OF REGISTER MODAL -->
-    <footer style="background-color: #FEF377 !important;">
-      <nav class="navbar navbar-expand-lg navbar-light px-3 myh5" style="background-color: #FEF377 !important;">
-        <div class="container pt-5">
-          <div class="navbar-brand-container">
-            <a class="navbar-brand myh5" href="#">TOY STORY</a>
-          </div>
-          <br>
-          <br>
-          <div class="footer-list">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Our Company</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../Products Page">Products</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact us</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <div class="container px-md-3 px-sm-1 pb-5 footer-info mytext">
-        <div class="footer-add-margin">
-          <img class="float-right" src="images/footer.png" style="max-width:200px;">
-          <ul class="d-inline-block px-0 mr-3">
-            <li class="mytext">
-              <h5>Sales and inquiries</h5>
-            </li>
-            <li class="mytext">
-              <p>Email: </p>
-            </li>
-            <li class="mytext">
-              </p>Phone: +358 10 387 7053</p>
-            </li>
-          </ul>
-          <div class="d-inline-block mytext">
-            <button class="btn btn-success">Contact us</button>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <!-- END OF FOOTER -->
+  </footer>
+  <!-- END OF FOOTER -->
 
 
 </body>
