--- a/tt.html
+++ b/tt.html
@@ -1,32 +1,81 @@
-        <!-- Admin MODAL -->
-        <div id="AdminPage" class="modal">
-          <div class="modal-content">
-              <span class="close">&times;</span>
-              <h2>Price Category</h2>
-              <div class="transparent-container">
-                <div id="results_dyn" style="margin-left: 30px;margin-top: 30px;text-align: left;">
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="css/main.css" rel="stylesheet">
+    <script src="jsFunction/main.js"></script>
+    <style>
+
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
+}    </style>
+</head>
+
+<body>
+
+        <div id="myNav" class="overlay">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <div class="overlay-content">
+                  <a href="#">About</a>
+                  <a href="#">Services</a>
+                  <a href="#">Clients</a>
+                  <a href="#">Contact</a>
                 </div>
               </div>
-          </div>
-      </div>
-      <!-- END OF Admin MODAL -->
+              
+              <h2>Fullscreen Overlay Nav Example</h2>
+              <p>Click on the element below to open the fullscreen overlay navigation menu.</p>
+              <p>In this example, the navigation menu will slide in, from left to right:</p>
+              <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+              
+</body>
 
-
-      <div id="myModal" class="modalAdmin">
-
-        <!-- Modal content -->
-        <div class="modalAdmin-content" id="mdlContentAdmin">
-            <div class="modalAdmin-header">
-                <span class="closeAdmin">&times;</span>
-                <h2>Price Category</h2>
-            </div>
-            <div class="modal-bodyAdmin">
-                <div id="results_dyn" style="margin-left: 30px;margin-top: 30px;text-align: left;">
-
-
-
-                </div>
-            </div>
-        </div>
-
-    </div>
+</html>
